<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
    <string name="app_name">爱家康</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_txt">手机号码</string>
    <string name="wechat_txt">微信账号</string>
    <string name="mi_txt">小米账号</string>
    <string name="phone_86">+86</string>
    <string name="phone_86_with_space">+86&#160;</string>
    <string name="passwd_txt">密码</string>
    <string name="verify_code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="second">秒</string>
    <string name="set_passwd">设置密码</string>
    <string name="username_hint">填写昵称</string>
    <string name="next_step">下&#160;一&#160;步</string>
    <string name="login_txt">登&#160;&#160;&#160;录</string>
    <string name="finish">完&#160;&#160;&#160;成</string>
    <string name="submit">提&#160;&#160;&#160;交</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="copy_success">已复制内容到剪切板</string>
    <string name="choose_from_camera">拍照</string>
    <string name="choose_from_picshop">从相册选取</string>
    <string name="click_again_exist">再按一次退出爱家康</string>
    <string name="mmHg">mmHg</string>
    <string name="kpa">kpa</string>
    <string name="bpm">次/分钟</string>
    <string name="sys">高压</string>
    <string name="dia">低压</string>
    <string name="pulse">心率</string>
    <string name="choose_img">选择图片</string>
    <string name="tip">温馨提示</string>
    <string name="iknow">我知道了</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="un_edit">未填写</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="finish_without_space">完成</string>

    <!-- HostActivity -->
    <string name="host_activity_bottom_measure">测量</string>
    <string name="host_activity_bottom_results">记录</string>
    <string name="host_activity_bottom_discover">发现</string>
    <string name="host_activity_bottom_me">我的</string>

    <!-- HostMe-->
    <string name="host_me_account">爱家康账号：</string>
    <string name="my_devices">我的设备</string>
    <string name="my_relationship">家人管理</string>
    <string name="setting">设置</string>
    <string name="doctor_service">家庭医生服务</string>
    <string name="change_passwd">修改密码</string>
    <string name="prefer_setting">偏好设置</string>
    <string name="feed_back">意见反馈</string>
    <string name="measure_intro">测量指导</string>
    <string name="about_app">关于爱家康</string>

    <!-- HostResults -->
    <string name="host_result_measure_time">测量时间：</string>
    <string name="host_result_coordinate_bp_title">血压变化趋势</string>
    <string name="host_result_coordinate_pulse_title">心率变化趋势</string>
    <string name="host_result_coordinate_tag">备注：</string>
    <string name="host_result_coordinate_medicine_on">服药</string>
    <string name="host_result_coordinate_medicine_off">未服药</string>
    <string name="host_result_title">的记录</string>


    <!-- SettingActivity -->
    <string name="account_bind">账号绑定</string>
    <string name="normal_problems">常见问题</string>
    <string name="use_intro">使用指导</string>
    <string name="exit_account">退出账号</string>

    <!-- LoginActivity -->
    <string name="login_activity_regist_txt">快速注册</string>
    <string name="login_activity_forget_passwd">忘记密码?</string>
    <string name="login_activity_third_party">其他方式登录</string>
    <string name="login_activity_mi">小米</string>
    <string name="login_activity_wechat">微信</string>
    <string name="login_activity_guest">先用用看</string>

    <!-- RegisterActivity -->
    <string name="register_title">快速注册</string>
    <string name="register_passwd_finish">完&#160;成&#160;注&#160;册</string>
    <string name="afterseconds_send">s后重新获取</string>

    <!-- ForgetPasswdActivity-->
    <string name="forget_phone_title">忘记密码</string>
    <string name="forget_setting_title">设置新密码</string>
    <string name="input_new_passwd">输入新密码</string>

    <!-- ChangePasswdActivity -->
    <string name="change_passwd_input_ori">输入原密码</string>
    <string name="change_passwd_input_new">输入新密码</string>

    <!-- UserInfoActivity -->
    <string name="userinfo_title">个人信息</string>
    <string name="userinfo_logo">头像</string>
    <string name="userinfo_nick_name">昵称</string>
    <string name="userinfo_birth">生日</string>
    <string name="userinfo_gender">性别</string>
    <string name="userinfo_height">身高</string>
    <string name="userinfo_weight">体重</string>
    <string name="userinfo_un_edit">选填</string>
    <string name="userinfo_nickname_hint">请输入您的昵称</string>



    <!-- AboutActivity -->
    <string name="about_title">关于爱家康</string>
    <string name="about_version">版本号：</string>
    <string name="about_customer_service">客户热线：</string>
    <string name="about_customer_service_phone">400-611-0202</string>
    <string name="about_wechat">微信公众号：</string>
    <string name="about_wechat_value">iHealth China</string>
    <string name="about_qq">用户QQ群：</string>
    <string name="about_qq_value">283819712</string>
    <string name="about_bottom_txt">北京爱和健康科技有限公司版权所有\nCopyright&#160;2015</string>

    <!-- PreferActivity -->
    <string name="prefer_unit">血压单位</string>
    <string name="prefer_testing_voice">测量中语音提示</string>
    <string name="prefer_result_voice">测量结果语音播报</string>

    <!-- FeedBackActivity -->
    <string name="feedback_normal_question">常见问题通道</string>
    <string name="feedback_edit_content">反馈详细内容</string>
    <string name="feedback_edit_right_tag">/264字</string>
    <string name="feedback_edit_hint">请输入您要反馈的意见，谢谢！</string>
    <string name="feedback_use_machine">使用血压计类型(必选项)</string>
    <string name="feedback_use_machine_bp3m">插口版血压计</string>
    <string name="feedback_use_machine_bp3l">蓝牙版血压计</string>
    <string name="feedback_contact">联系方式</string>
    <string name="feedback_contact_hint">电话号码或者QQ，方便我们与您联系</string>
    <string name="feedback_commit">提&#160;交&#160;反&#160;馈</string>

    <!-- CameraActivity -->
    <string name="camera_title">选择图片</string>
    <string name="camera_finish">完成</string>

    <!-- AccountBindActivity -->
    <string name="accountbind_binded">已绑定</string>
    <string name="accoundbind_unbind">未绑定</string>
    <string name="accoundbind_change">更改</string>

    <!-- BindPhoneActivity -->
    <string name="bindphone_title">绑定手机号</string>
    <string name="changephone_title">更换手机号</string>
    <string name="changephone_button_txt">确&#160;认&#160;更&#160;改</string>
    <string name="bindphone_phone_tip">输入需要绑定的手机号码</string>
    <string name="bindphone_change_phone_tip">输入需要绑定的新号码</string>
    <string name="bindphone_change_phone_tip1">更改后请使用新的手机号码登录</string>
    <string name="bindphone_passwd_tip0">您绑定的手机号码</string>
    <string name="bindphone_passwd_tip1">，设置密码后可以通过手机号码登录</string>

    <!-- UserIntroActivity -->
    <string name="useintro_start_test">开&#160;始&#160;测&#160;量</string>

    <!-- RelationshipActivity -->
    <string name="relationship_no_add_yet">您还没有添加家人</string>
    <string name="relationship_add">添加家人</string>

    <!-- NormalQuesActivity -->
    <string name="normalques_normal_ques">热门常见问题</string>

    <!-- AddFamilyPersonActivity -->
    <string name="addfamilyperson_title">添加家人信息</string>

</resources>
