<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height"
        android:background="@color/title_bgcolor">

        <com.ihealth.aijiakang.widgets.FontTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="@color/title_color"
            android:textSize="@dimen/textsize_18"
            custom:fontWeight="1" />

        <com.ihealth.aijiakang.widgets.ClickAlphaFrameLayout
            android:id="@+id/about_return"
            android:layout_width="@dimen/return_w"
            android:layout_height="match_parent">

            <com.ihealth.aijiakang.widgets.RecycleImageView
                android:layout_width="@dimen/return_pic_w"
                android:layout_height="@dimen/return_pic_h"
                android:layout_gravity="center"
                android:src="@mipmap/return_pic" />
        </com.ihealth.aijiakang.widgets.ClickAlphaFrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color"></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_bgcolor"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_top_layout_height">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.ihealth.aijiakang.widgets.RecycleImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@mipmap/ic_launcher" />

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/about_version_margin_top"
                    android:text="@string/about_version"
                    android:textColor="@color/text_shadow_color"
                    android:textSize="@dimen/textsize_13" />
            </LinearLayout>
        </FrameLayout>

        <com.ihealth.aijiakang.widgets.ClickBgRelativeLayout
            android:id="@+id/about_customer_service_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_item_height"
            android:background="@color/layout_item_color">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_width"
                android:background="@color/line_color"></View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:orientation="horizontal">

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_customer_service"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/textsize_16" />

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_customer_service_phone"
                    android:textColor="@color/text_shadow_color"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_width"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:background="@color/shadow_line_color"></View>
        </com.ihealth.aijiakang.widgets.ClickBgRelativeLayout>

        <com.ihealth.aijiakang.widgets.ClickBgRelativeLayout
            android:id="@+id/about_wechat_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_item_height"
            android:background="@color/layout_item_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:orientation="horizontal">

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_wechat"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/textsize_16" />

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_wechat_value"
                    android:textColor="@color/text_shadow_color"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_width"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:background="@color/shadow_line_color"></View>
        </com.ihealth.aijiakang.widgets.ClickBgRelativeLayout>

        <com.ihealth.aijiakang.widgets.ClickBgRelativeLayout
            android:id="@+id/about_qq_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_item_height"
            android:background="@color/layout_item_color">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/about_padding_left"
                android:orientation="horizontal">

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_qq"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/textsize_16" />

                <com.ihealth.aijiakang.widgets.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_qq_value"
                    android:textColor="@color/text_shadow_color"
                    android:textSize="@dimen/textsize_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_width"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color"></View>
        </com.ihealth.aijiakang.widgets.ClickBgRelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ihealth.aijiakang.widgets.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/about_bottom_txt_margin_bottom"
                android:textColor="@color/text_shadow_color"
                android:textSize="@dimen/textsize_13"
                android:gravity="center"
                android:text="@string/about_bottom_txt"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>